<resources>
    <string name="app_name">云智全课通</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="flistview_tv_no_message">暂时没有新的消息</string>
    <string name="teacher_firstpager_my_tv">我的账户</string>
    <string name="teacher_firstpager_message_tv">我的消息</string>
    <string name="teacher_firstpager_tv">暂未开启，敬请期待</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete">删除</string>
    <string name="teacher_comment_choice">选择点评班级</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="voice">[语音]</string>
    <string name="location">[位置]</string>
    <string name="picture">[图片]</string>
    <string name="system_message">[系统消息]</string>
    <string name="new_news">[新消息]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="logout">退出登录</string>
    <string name="exit_group">退出登录</string>
    <string name="connect_conflict">您的账号已在别处登录，本地已下线。如非本人操作，可能密码已经泄露，建议尽快修改密码。</string>
    <string name="login_button">登        录</string>
    <string name="login_password">忘记密码?</string>
    <string name="login_inputpasword">密码</string>
    <string name="fogetpassworld_tv">6到20位数字、字母、符号，不能包含空格。</string>
    <string name="teacher_comment_history">历史点评</string>
    <string name="fogetpassworld_btn_send">获取验证码</string>
    <string name="fogetpassworld_phoneNumber">手机号码</string>
    <string name="fogetpassworld_et_verify">验证码</string>
    <string name="fogetpassworld_newpaswworld">新密码</string>
    <string name="fogetpassworld_renewpaswworld">重复新密码</string>
    <string name="loginactivity_btn_login">确     定</string>
    <string name="commit_zgd">提     交</string>
    <string name="choice_chile">请选择账号</string>
    <string name="title_imgbtn_accomplish">完成</string>
    <string name="title_text_2">相机胶卷</string>
    <string name="parent_message_payment">点击去付款>></string>
    <string name="action_settings">Settings</string>
    <string name="my_title">我的</string>
    <string name="my_lv_1">我的报名</string>
    <string name="my_lv_2">我的消息</string>
    <string name="my_lv_3">设置</string>
    <string name="my_lv_6">设置</string>
    <string name="my_lv_7">我的收藏</string>
    <string name="myenroll_class">预订课程</string>
    <string name="mydetail_icon_text">我的小孩</string>
    <string name="mydetail_item_touxiang">头像</string>
    <string name="mydetail_item_phone">手机号码</string>
    <string name="mydetail_item_email">邮箱</string>
    <string name="teac_mydeetail_item_phone_card">银行卡</string>
    <string name="invite_relationship_spinner_text">请选择被邀请人与小孩的关系</string>
    <string name="consume_record">消费记录</string>
    <string name="recharge_record">充值记录</string>
    <string-array name="invite_relationship_spinner">
        <item>爸爸</item>
        <item>妈妈</item>
        <item>爷爷</item>
        <item>奶奶</item>
        <item>外公</item>
        <item>外婆</item>
        <item>其他</item>
    </string-array>
    <string name="teac_mydeetail_bankname_tv">银行名称</string>
    <string name="teac_mydeetail_bankname">请选择银行</string>
    <string name="teac_mydeetail_item_phone_text">手机</string>
    <string name="teac_mydeetail_item_name_text">姓名</string>
    <string name="teac_bankcardnumber_tv">银行卡号</string>
    <string name="teac_bank_item_cardname_text">银行卡户名</string>
    <string name="teac_openforbank_tv">开户行</string>
    <string name="teac_mydeetail_item_name_et">请输入银行卡号</string>
    <string name="teac_openforbank_et">请输入开户行名称</string>
    <string name="teac_bank_consult">可拨打银行客服电话咨询</string>
    <string name="teac_mydeetail_item_job_text">岗位</string>
    <string name="mydetail_item_passworld">密码</string>
    <string name="mydetail_title_text">我的账户</string>
    <string name="my_meaasge_title">我的消息</string>
    <string name="teacher_homework_title">作业</string>
    <string name="MyEnrollActivityTitle">我的报名</string>
    <string name="myset_delete_text">清除缓存</string>
    <string name="myset_message_text">接收推送消息</string>
    <string name="myset_message_voice_text">新消息声音提示</string>
    <string name="myset_message_shake_text">新消息震动提示</string>
    <string name="myset_use_help_text">使用帮助</string>
    <string name="myset_opinion_text">意见反馈</string>
    <string name="myset_update">软件更新</string>
    <string name="myset_about">关于</string>
    <string name="myset_shuoming">版本更新说明</string>
    <string name="teacher_bank_commit_btn">提      交</string>
    <string name="advicefeedback_commit_btn">发送</string>
    <string name="myset">设置</string>
    <string name="enrolldetail">报名详情</string>
    <string name="update_old_password">旧密码</string>
    <string name="update_new_password">新密码</string>
    <string name="update_renew_password">重复密码</string>
    <string name="update_old_password_hin">请输入旧密码</string>
    <string name="update_new_password_hin">请重新设置密码</string>
    <string name="update_renew_password_hin">请再次输入密码</string>
    <string name="revise_password">修改密码</string>
    <string name="updatepassword_tips">限6-20位数字、字母、特殊符号，区分大小写，不能包含空格</string>
    <string name="update_email">请输入邮箱</string>
    <string name="exit_app">您确定退出云智全课通?</string>
    <string name="eixt_text">不提示好友离线消息</string>
    <string name="about_text">扫描二维码，您的朋友也可以安装云智全课通</string>
    <string name="advicefeedback_advice_content">有任何不爽的地方欢迎吐槽，感谢您给我们提出建议</string>
    <string name="img_selector_all">所有图片</string>
    <string name="selector_img_title">图片</string>
    <string name="contact_choice_all_text">选择学生</string>
    <string name="contact_choice_text">全选</string>
    <string name="choice_stu">选择学生</string>
    <string name="can_not_find_version_name">无法获取有用版本号</string>
    <string name="rule_password">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+&#060;&#062;&#064;&#038;</string>
    <string name="fogerpasswordtext">忘记密码</string>
    <string name="reset_passsword">重置密码</string>
    <string name="teacher_notification_btn_send">发布通知</string>
    <string name="teachernotification_tv_no_message">暂时没有内容</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="notification_type_tv">通知类型:</string>
    <string name="rb_school_notification">学校通知</string>
    <string name="rb_grade_notification">年级通知</string>
    <string name="rb_class_notification">班级通知</string>
    <string name="choice_class">班级</string>
    <string name="accept_choice">接收状态</string>
    <string name="accept_choice_text">开启统计家长阅读人数</string>
    <string name="notification_title">标题</string>
    <string name="advicefeedback_advice_contact_way">请留下您的手机号、QQ或者邮箱(选填)</string>
    <string name="notification_content">请输入内容</string>
    <string name="teacher_homework_course_content">请输入作业内容</string>
    <string name="notification_commit_btn">发          布</string>
    <string name="splash_next">跳过</string>
    <string name="splash_finish">立即体验</string>
    <string name="notice_opened_package">家庭套餐到期后将自动关闭，如果您想继续使用可以在下次续费时选中家庭套餐</string>
    <string name="notice_closed_package">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;开启家庭套餐后，您可以邀请您的亲友来关注您小孩动态近况，数量不限。比如，小孩的父母、爷爷奶奶、外婆外公6位家长一起来关注小孩仅需5元/月。方便家中的多位家长获取小孩的最新信息。</string>
    <string name="open_invite_title">您尚未开通家庭套餐，不能邀请亲友关注小孩</string>
    <string name="open_invite_content">开启家庭套餐后，您可以邀请您的亲友来关注您小孩动态近况，数量不限。比如，小孩的父母、爷爷奶奶、外婆外公6位家长一起来关注小孩仅需5元/月。方便家中的多位家长获取小孩的最新信息。</string>
    <string name="invite_hint_tel">请输入被邀请人的手机号码</string>
    <string name="renew_duration_content">续费时长为%1$s至%2$s其中扣除寒暑假时间%3$s个月</string>
    <string name="child_name_member_center">会员中心</string>
    <string name="member_center">会员中心</string>
    <string name="payment_record">续费记录</string>
    <string name="payment_success">交易成功</string>
    <string name="payment_continue">继续支付</string>
    <string name="mycollects">我的收藏</string>
    <string name="title_member_center">会员中心</string>
    <string name="title_invite_attention">邀请关注</string>
    <string name="title_invite_people">邀请</string>
    <string name="title_package_select">选择套餐</string>
    <string name="title_renew_confirm">续费</string>
    <string name="title_order_confirm">订单确认</string>
    <string name="title_package_manage">套餐管理</string>
    <string name="title_pay_fail">待支付</string>
    <string name="join_bt_attention2">已加入人员</string>
    <string name="title_btn_invite">邀 请</string>
    <string name="publish_dynamic">发布</string>
    <string name="forward_title_text">确定转发给:</string>
    <string name="contacts_detail_text">点击拨打电话将进入本机电话功能，不消耗网络流量</string>
    <string name="upschooltime">修改放学时间</string>
    <string name="original_picture">原图</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="service">应用</string>
    <string name="next_step">下一步</string>
    <string name="commit">提交</string>
    <string name="forgetpasswd">找回密码</string>
    <string name="notify">通知</string>
    <string name="title_activity_email">邮件</string>
    <string name="title_activity_mail">校长信箱</string>
    <string name="no_network">当前网络不可用，请检查您的网络设置</string>
    <string name="dailyrecord">日志</string>
    <string name="summary">总结</string>
    <string name="login_activity_user">用户:</string>
    <string name="login_activity_port">端口:</string>
    <string name="login_activity_ip">IP:</string>
    <string name="login_activity_password">密码:</string>
    <string name="login_activity_login">登录</string>
    <string name="login_activity_logout">登出</string>
    <string name="fun_activity_title">Functions</string>
    <string name="RealPlay">Real play</string>
    <string name="Talk">Talk</string>
    <string name="FilePlayBack">Play back by record</string>
    <string name="TimePlayBack">Play back by time</string>
    <string name="Comm">COM Setting</string>
    <string name="CANBus">CAN Setting</string>
    <string name="DevKeepLive">Keep alive setting</string>
    <string name="Alarm">Alarm</string>
    <string name="TestInterface">Interface testing</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="login">正在登录</string>
    <string name="progress_content">正在登录</string>
    <string name="seen_more">更多</string>
    <string name="refresh_bar_last_update">上次更新</string>
    <string name="drop_dowm">下拉可以刷新</string>
    <string name="release_update">松开可以刷新</string>
    <string name="loading">载入中...</string>
    <string name="header_last_time">最近更新：</string>
    <string name="common_connect">正在连接</string>
    <string name="tab_group_tv">组织</string>
    <string name="grouplist_getgroup_fail">获取组织列表失败，异常代码：</string>
    <string name="select_channel_limit_tv">打开通道上限为32路</string>
    <string name="select_channel_tv">请先选择预览通道</string>
    <string name="select_channel_already_open">通道已打开</string>
    <string name="common_msg_title">提示</string>
    <string name="common_confirm">确定</string>
    <string name="tongdao_mc">通道名称:</string>
    <string name="play_real">实时</string>
    <string name="play_back">回放</string>
    <string name="verify">您的账号正在更换设备登录，请先验证您的身份</string>
</resources>