<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_darktyellow"
    android:orientation="vertical" >

    <include layout="@layout/title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/myset_nomar_padding"
        android:background="@color/line_darkyellow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_hight"
        android:background="@color/backgroud_white"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/nomar_margin" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/update_old_password"
            android:textSize="@dimen/three_text_point_five_type" />

        <EditText
            android:id="@+id/updatapassword_old"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edite_heigh"
            android:layout_marginLeft="@dimen/nomar_margin"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/update_old_password_hin"
            android:inputType="textPassword"
            android:maxLength="20"
            android:digits="@string/rule_password"
            android:textColor="@color/font_darkgray"
            android:textSize="@dimen/three_text_type"
             />

        <ImageView
            android:id="@+id/updatapassword_old_delete"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0"
            android:src="@drawable/close"
            android:visibility="gone" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_darkyellow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_hight"
        android:background="@color/backgroud_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/nomar_margin" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/update_new_password"
            android:textSize="@dimen/three_text_point_five_type" />

        <EditText
            android:id="@+id/updatapassword_new"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edite_heigh"
            android:layout_marginLeft="@dimen/nomar_margin"
            android:layout_weight="1"
            android:background="@null"
             android:maxLength="20"
            android:digits="@string/rule_password"
            android:hint="@string/update_new_password_hin"
            android:inputType="textPassword"
            android:textColor="@color/font_darkgray"
            android:textSize="@dimen/three_text_type" />

        <ImageView
            android:id="@+id/updatapassword_new_delete"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0"
            android:src="@drawable/close"
            android:visibility="gone"
            />
    </LinearLayout>

   
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_darkyellow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_hight"
        android:background="@color/backgroud_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/nomar_margin" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/update_renew_password"
            android:textSize="@dimen/three_text_point_five_type" />

        <EditText
            android:id="@+id/updatapassword_renew"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edite_heigh"
            android:layout_marginLeft="@dimen/nomar_margin"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/update_renew_password_hin"
            android:inputType="textPassword"
            android:maxLength="20"
            android:digits="@string/rule_password"
            android:textColor="@color/font_darkgray"
            android:textSize="@dimen/three_text_type" />

        <ImageView
            android:id="@+id/updatapassword_renew_delete"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0"
            android:src="@drawable/close"
            android:visibility="gone" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_darkyellow" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/nomar_margin"
        android:text="@string/updatepassword_tips"
        android:textColor="@color/font_darkgray"
        android:textSize="@dimen/four_text_type"
         />

    <Button
        android:id="@+id/update_password_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/big_button_height"
        android:layout_margin="@dimen/nomar_margin"
        android:layout_marginTop="35dp"
        android:background="@drawable/login_selector"
        android:text="@string/loginactivity_btn_login"
        android:textColor="@color/font_white"
        android:textSize="@dimen/second_text_type" />

</LinearLayout>