<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_lightyellow"
    android:orientation="vertical" >

    <include layout="@layout/title" />

    <!-- 意见反馈界面 -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/nomar_margin" >

            <EditText
                android:id="@+id/advicefeedback_advice_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nomar_margin"
                android:background="@color/backgroud_white"
                android:gravity="start"
                android:hint="@string/advicefeedback_advice_content"
                android:inputType="textMultiLine"
                android:minHeight="100dp"
                android:padding="10dp"
                android:maxLength="1000"
                android:singleLine="false"
                android:textSize="@dimen/four_text_type" />

            <EditText
                android:id="@+id/advicefeedback_advice_contact_way"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nomar_margin"
                android:background="@color/backgroud_white"
                android:hint="@string/advicefeedback_advice_contact_way"
                android:inputType="phone"
                android:digits="@string/rule_password"
                android:minHeight="@dimen/editetext_height"
                android:padding="10dp"
                android:paddingLeft="10dp"
                android:singleLine="false"
                android:textSize="@dimen/four_text_type" />

            <Button
                android:id="@+id/advicefeedback_commit_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/big_button_height"
                android:layout_margin="@dimen/nomar_margin"
                android:layout_marginTop="35dp"
                android:background="@drawable/login_selector"
                android:text="@string/advicefeedback_commit_btn"
                android:textColor="@color/font_white"
                android:textSize="@dimen/second_text_type" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>