<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_darktyellow"
    android:orientation="vertical" >

    <!-- 老师个人信息 修改银行卡 -->

    <include layout="@layout/title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_hight"
        android:layout_marginTop="20dp"
        android:background="@color/line_darkyellow" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/my_item_hight"
        android:background="@drawable/item_selector"
        android:padding="@dimen/mydetail_content_padding" >

        <TextView
            android:id="@+id/teac_bank_item_cardname_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/teac_bank_item_cardname_text"
            android:textColor="@color/font_black"
            android:textSize="@dimen/three_text_type" />

        <TextView
            android:id="@+id/teac_mydeetail_item_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/teac_bank_item_cardname_text"
            android:layout_marginLeft="@dimen/myset_nomar_padding"
            android:layout_marginRight="@dimen/mydetail_content_padding"
            android:layout_toRightOf="@+id/teac_bank_item_cardname_text"
            android:text="王香红"
            android:textColor="@color/font_black"
            android:textSize="@dimen/three_text_type" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_hight"
        android:layout_marginLeft="@dimen/mydetail_line_magrin"
        android:layout_marginRight="@dimen/mydetail_line_magrin"
        android:background="@color/line_darkyellow" />

    <!-- 银行卡号 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/my_item_hight"
        android:background="@drawable/item_selector"
        android:gravity="center_vertical"
        android:padding="@dimen/mydetail_content_padding" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/nomar_margin"
            android:layout_weight="0"
            android:text="@string/teac_bankcardnumber_tv"
            android:textColor="@color/font_black"
            android:textSize="@dimen/three_text_type" />

        <EditText
            android:id="@+id/teac_mydeetail_item_name_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/myset_nomar_padding"
            android:layout_marginRight="@dimen/mydetail_content_padding"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/teac_mydeetail_item_name_et"
            android:textSize="@dimen/three_text_type" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_hight"
        android:layout_marginLeft="@dimen/mydetail_line_magrin"
        android:layout_marginRight="@dimen/mydetail_line_magrin"
        android:background="@color/line_darkyellow" />

    <!-- 银行名称 -->

    <RelativeLayout
        android:id="@+id/teac_mydeetail_item_bankname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/my_item_hight"
        android:background="@drawable/item_selector"
        android:gravity="center"
        android:padding="@dimen/mydetail_content_padding" >

        <TextView
            android:id="@+id/teac_mydeetail_bankname_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/teac_mydeetail_bankname_tv"
            android:textColor="@color/font_black"
            android:textSize="@dimen/three_text_type" />

        <ImageView
            android:id="@+id/teac_mydetail_item_email_arrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/mydetail_content_margin_right"
            android:src="@drawable/my_corner" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/teac_mydeetail_bankname_tv"
            android:layout_alignBottom="@+id/teac_mydeetail_bankname_tv"
            android:layout_centerHorizontal="true"
            android:text="@string/teac_mydeetail_bankname"
            android:textColor="@color/font_darkgray"
            android:textSize="@dimen/three_text_type" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_hight"
        android:layout_marginLeft="@dimen/mydetail_line_magrin"
        android:layout_marginRight="@dimen/mydetail_line_magrin"
        android:background="@color/line_darkyellow" />

    <!-- 开户行 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/my_item_hight"
        android:background="@drawable/item_selector"
        android:gravity="center_vertical"
        android:padding="@dimen/mydetail_content_padding" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/nomar_margin"
            android:layout_weight="0"
            android:text="@string/teac_openforbank_tv"
            android:textColor="@color/font_black"
            android:textSize="@dimen/three_text_type" />

        <EditText
            android:id="@+id/teac_openforbank_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/myset_nomar_padding"
            android:layout_marginRight="@dimen/mydetail_content_padding"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/teac_openforbank_et"
            android:textSize="@dimen/three_text_type" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_hight"
        android:background="@color/line_darkyellow" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/teac_bank_consult"
        android:layout_marginTop="@dimen/nomar_margin"
        android:textColor="@color/font_darkgray"
        android:textSize="@dimen/four_text_type" />

    <Button
        android:id="@+id/teacher_bank_commit_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/big_button_height"
        android:layout_margin="@dimen/nomar_margin"
        android:layout_marginTop="35dp"
        android:background="@drawable/login_selector"
        android:text="@string/teacher_bank_commit_btn"
        android:textColor="@color/font_white"
        android:textSize="@dimen/second_text_type" />

</LinearLayout>