<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_darktyellow" >

        <include
            android:id="@+id/title"
            layout="@layout/title" />


        <TextView
            android:id="@+id/tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/content_to_bord"
            android:text="@string/verify"/>

        <LinearLayout
            android:id="@+id/verify"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/editetext_height"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/tip"
            android:background="@color/backgroud_white"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_verify"
                android:layout_width="0dp"
                android:layout_height="@dimen/editetext_height"
                android:layout_weight="1"
                android:background="@color/backgroud_white"
                android:hint="@string/fogetpassworld_et_verify"
                android:padding="@dimen/content_to_bord"
                android:textSize="@dimen/four_text_type" />

            <ImageView
                android:id="@+id/verify_delete_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0"
                android:src="@drawable/close"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginRight="@dimen/content_to_bord"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:background="@drawable/only_login_selector"
                android:gravity="center"
                android:text="@string/fogetpassworld_btn_send"
                android:textColor="@color/font_white"
                android:textSize="@dimen/four_text_type" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/verify"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="@dimen/content_to_bord"
            android:layout_marginRight="@dimen/content_to_bord"
            android:layout_centerHorizontal="true"
            android:background="@drawable/only_login_selector"
            android:padding="5dp"
            android:text="@string/common_confirm"
            android:textColor="@color/font_white"
            android:textSize="@dimen/mycollect_text_type" />

</RelativeLayout>
