<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_white"
    android:orientation="vertical" >

    <!-- 邀请 -->
    <include layout="@layout/title" />

    <Spinner 
        android:id="@+id/invite_people_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:prompt="@string/invite_relationship_spinner_text"
        android:entries="@array/invite_relationship_spinner"
        android:spinnerMode="dialog"
        /> 
    <!-- <EditText
        android:id="@+id/et_invite_relation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/invite_hint_relation"
        android:maxLength="20"
        android:singleLine="true" /> -->

    <EditText
        android:id="@+id/et_invite_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:digits="0123456789-"
        android:drawablePadding="10dp"
        android:hint="@string/invite_hint_tel"
        android:inputType="phone"
        android:maxLength="11"
        android:singleLine="true" />

    <Button
        android:id="@+id/bt_invite_ok"
        android:layout_width="match_parent"
        android:layout_height="@dimen/big_button_height"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_green_selector"
        android:text="@string/ok"
        android:textColor="@color/font_white"
        android:textSize="@dimen/second_text_type" />

</LinearLayout>